--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,4 +1,4 @@
-<h1> List of users <h1>
+<h1> List of users </h1>
 
 <table border="1">
   <tr>
@@ -7,5 +7,11 @@
     <th></th>
   </tr>
 
-  <% @list_of_users%>
+  <% @list_of_users.each do |a_user|%>
+    <tr>
+      <td><%= a_user.id%> </td>
+      <td><%= a_user.username%> </td>
+      <td>Show details</td>
+    </tr>
+  <%end%>
 </table>
