--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
+  <nav>
+    <ul>
+      <li><a href="/users">Users</a></li>
+      <li><a href="/photos">Photos</a></li>
+    </ul>
+  </nav>
+  
   <body>
 
     <%= yield %>
