--- a/app/views/user_templates/details.html.erb
+++ b/app/views/user_templates/details.html.erb
@@ -24,11 +24,11 @@
       <img src="<%=a_photo.image%>">
     </td>
     <td>
-      <%=a_photo.owner_id%>
+      <%= a_photo.poster.username %>
     </td>
     <td><%=a_photo.caption%></td>
     <td><%=a_photo.created_at%></td>
-    <td>Show details</td>
+    <td><a href="">Show details</a></td>
   </tr>
   <%end%>
 </table>
