--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -1,5 +1,17 @@
 <h1>List of photos</h1>
 
+<form action="/add_photo">
+  <label for="image_box">Image</label>
+  <input id="image_box" name="query_image">
+
+  <label for="caption_box">Caption</label>
+  <textarea id="caption_box" name="query_caption"></textarea>
+
+  <label for="owner_id_box">Owner ID</label>
+  <input id="owner_id_box" name="query_owner">
+
+  <button>Add photo</button>
+</form>
 <table border="1">
   <tr>
     <th>
