added new comments form

--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -1,6 +1,6 @@
 <h1>List of photos</h1>
 
-<form action="/add_photo">
+<form action="/add_photo" method="post">
   <label for="image_box">Image</label>
   <input id="image_box" name="query_image">
 
