--- a/app/views/photo_templates/details.html.erb
+++ b/app/views/photo_templates/details.html.erb
@@ -37,7 +37,7 @@
   <dd>
     <form action="/update_photo/<%=@the_photo.id%>" method="post">
       <label for="browser_image">Image</label>
-      <input id="browser_image" type="text" name="query_image" placeholder="Enter a URL for the image..." value="<%=@the_photo.image%>"
+      <input id="browser_image" type="text" name="query_image" placeholder="Enter a URL for the image..." value="<%=@the_photo.image%>">
 
       <label for="browser_caption">Caption</label>
       <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the image..."><%=@the_photo.caption%>          </textarea>
